# django-owm

./: .cookiecutter.json  .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
compose/django/: Dockerfile
docs/: autoreference.md  conf.py  index.md  reference.md  requirements.txt  terminology.md  usage.md
example_project/: asgi.py  settings.py  test_admin.py  test_app_settings.py  test_django_owm.py  test_forms.py  test_management_commands.py  test_models.py  test_tasks.py  test_templates.py  test_utils.py  test_validators.py  test_views.py  urls.py  wsgi.py
example_project/example/: models.py  tests.py  urls.py
example_project/example/migrations/: 0001_initial.py  0002_alter_weatherlocation_latitude_and_more.py
src/django_owm/: admin.py  app_settings.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
src/django_owm/management/commands/: create_location.py  delete_location.py  list_locations.py  manual_weather_fetch.py
src/django_owm/models/: __init__.py  abstract.py  base.py
src/django_owm/templates/django_owm/: base.html  create_location.html  delete_location.html  list_locations.html  update_location.html  weather_alerts.html  weather_detail.html  weather_errors.html  weather_forecast.html  weather_history.html
src/django_owm/templates/django_owm/partials/: weather_alerts.html  weather_errors.html  weather_forecast.html  weather_history.html
src/django_owm/utils/: api.py  saving.py
tests/: __init__.py  settings.py
